--- a/css/style-narrower.css
+++ b/css/style-narrower.css
@@ -40,13 +40,13 @@ header.special h2 + p {
 }
 
 #about_image {
-	width: 60%;
+	width: 70%;
 	margin: 1em 5em 1em 5em;
 }
 
 #about_text {
 	width: 80%;
-	margin: 0em 5em 0em 5em;
+	margin: 1em 5em 1em 5em;
 	padding: 0.5em 1em 0.5em 1em;
 }
 
